--- a/excelDecode.ipynb
+++ b/excelDecode.ipynb
@@ -213,7 +213,7 @@
    "outputs": [],
    "source": [
     "# 需要压缩的目录\n",
-    "filename = '绍兴市'\n",
+    "filename = 'a'\n",
     "base_dir = './{0}'.format(filename)\n",
     "# 压缩结果\n",
     "target = './{0}_res.zip'.format(filename)\n",
